--- a/Src/Infrastructure/Templates.Core.Infrastructure.Messaging.EntityFrameworkCore/Templates.Core.Infrastructure.Messaging.EntityFrameworkCore.csproj
+++ b/Src/Infrastructure/Templates.Core.Infrastructure.Messaging.EntityFrameworkCore/Templates.Core.Infrastructure.Messaging.EntityFrameworkCore.csproj
@@ -12,9 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Polly" Version="8.5.0" />
     <PackageReference Include="Quartz" Version="3.13.1" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.13.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
