--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,11 +27,13 @@ jobs:
         echo "version=$TAG_VERSION" >> $GITHUB_ENV
 
     - name: Authenticate to GitHub Packages
-      run: dotnet nuget add source "https://nuget.pkg.github.com/AnnabiGihed/index.json" \
-        --name "github" \
-        --username "AnnabiGihed" \
-        --password "${{ secrets.TEMPLATES_SECRET }}" \
-        --store-password-in-clear-text
+      run: |
+        dotnet nuget add source "https://nuget.pkg.github.com/AnnabiGihed/index.json" \
+          --source-name "github" \
+          --username "AnnabiGihed" \
+          --password "${{ secrets.TEMPLATES_SECRET }}" \
+          --store-password-in-clear-text
+
 
     - name: Restore
       run: dotnet restore
