--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish NuGet Packages
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - 'v*.*.*' # Trigger on version tags (e.g., v1.0.0)
 
 jobs:
   publish:
@@ -11,60 +11,47 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
     - name: Set up .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '10.0.x'
+        dotnet-version: '10.x' # Update as needed (e.g., '7.x' or 'latest')
 
     - name: Extract tag version
       id: extract_version
-      shell: bash
       run: |
-        TAG_VERSION="${GITHUB_REF#refs/tags/v}"
+        # Remove the "v" prefix from the tag (e.g., v1.0.0 -> 1.0.0)
+        TAG_VERSION=${GITHUB_REF#refs/tags/v}
         echo "Tag version: $TAG_VERSION"
         echo "version=$TAG_VERSION" >> $GITHUB_ENV
 
-    - name: Publish all NuGet packages
+    - name: Update project versions
       run: |
-        dotnet nuget push ./artifacts/*.nupkg \
-          --source "https://nuget.pkg.github.com/AnnabiGihed/index.json" \
-          --api-key "${{ secrets.TEMPLATES_SECRET }}" \
-          --skip-duplicate
+        # Find all .csproj files and update the Version property
+        for csproj in $(find . -name "*.csproj"); do
+          echo "Updating version for: $csproj"
+          sed -i "s|<Version>.*</Version>|<Version>${{ env.version }}</Version>|" "$csproj"
+        done
 
-    - name: Restore
-      run: dotnet restore
+    - name: Authenticate to GitHub Packages
+      run: dotnet nuget add source "https://nuget.pkg.github.com/AnnabiGihed/index.json" --name "github" --username "AnnabiGihed" --password ${{ secrets.TEMPLATES_SECRET }} --store-password-in-clear-text
 
-    - name: Build
-      run: dotnet build -c Release --no-restore
-
-    - name: Pack (only packable projects)
-      shell: bash
+    - name: Build and pack all projects
       run: |
-        set -e
-        # Only pack projects that declare IsPackable=true
-        mapfile -t projects < <(grep -RIl "<IsPackable>true</IsPackable>" . | grep -E "\.csproj$" || true)
-
-        if [ ${#projects[@]} -eq 0 ]; then
-          echo "No packable projects found (IsPackable=true)."
-          exit 1
-        fi
-
-        for csproj in "${projects[@]}"; do
-          echo "Packing: $csproj"
-          dotnet pack "$csproj" -c Release --no-build /p:Version="${{ env.version }}" -o ./artifacts
+        # Find all .csproj files, build, and pack each
+        for csproj in $(find . -name "*.csproj"); do
+          echo "Processing project: $csproj"
+          dotnet build "$csproj" -c Release
+          dotnet pack "$csproj" -c Release
         done
 
     - name: Publish all NuGet packages
-      shell: bash
       run: |
-        set -e
-        shopt -s nullglob
-        for nupkg in ./artifacts/*.nupkg; do
+        # Find all .nupkg files in the workspace and push to GitHub
+        for nupkg in $(find . -name "*.nupkg"); do
           echo "Publishing package: $nupkg"
           dotnet nuget push "$nupkg" \
             --source github \
-            --api-key "${{ secrets.TEMPLATES_SECRET }}" \
-            --skip-duplicate
+            --api-key ${{ secrets.TEMPLATES_SECRET }}
         done
