--- a/Src/Infrastructure/Templates.Core.Infrastructure.Abstraction/Templates.Core.Infrastructure.Abstraction.csproj
+++ b/Src/Infrastructure/Templates.Core.Infrastructure.Abstraction/Templates.Core.Infrastructure.Abstraction.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.0.0</Version>
+    <Authors>Annabi Gihed</Authors>
+    <Description>Templates.Core.Infrastructure.Abstraction</Description>
+    <RepositoryUrl>https://github.com/AnnabiGihed/Templates.Core</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
