Extract Keycloak role helper & wire auth services
Introduce a shared KeycloakRoleHelper to flatten realm/resource roles into ClaimTypes.Role and refactor platform packages (API, Blazor, MAUI) to use it; align JWT TokenValidationParameters RoleClaimType to ClaimTypes.Role so [Authorize(Roles=...)] works consistently.

Add AddKeycloakAuthenticationServiceInstaller to register Keycloak auth pieces (Redis caching, Swagger OAuth definition/requirement) and avoid BuildServiceProvider by passing IConfiguration into Swagger setup. Add an IConfiguration overload for AddKeycloakSecurityDefinition.

Make caching changes: add Templates.Core.Caching namespace, implement TokenRevocationOptions.Validate() and call it when registering Redis token revocation cache; small fixes and using reorganizations. Update Templates.Core.Containers.API.csproj to include Authentication and Caching project references. Misc: improved MAUI setup docs and minor logging improvements for JSON parse errors.

--- a/Src/Containers/Templates.Core.Api/Templates.Core.Containers.API.csproj
+++ b/Src/Containers/Templates.Core.Api/Templates.Core.Containers.API.csproj
@@ -26,6 +26,8 @@
     <ProjectReference Include="..\..\Core\Templates.Core.Application\Templates.Core.Application.csproj" />
     <ProjectReference Include="..\..\Core\Templates.Core.Domain\Templates.Core.Domain.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Templates.Core.Infrastructure.Abstraction\Templates.Core.Infrastructure.Abstraction.csproj" />
+    <ProjectReference Include="..\Authentication\Templates.Core.Authentication.API\Templates.Core.Authentication.AspNetCore.csproj" />
+    <ProjectReference Include="..\Templates.Core.Caching\Templates.Core.Caching.csproj" />
   </ItemGroup>
 
 </Project>
