Authentication registration clean up

--- a/Src/Containers/Authentication/Pivot.Framework.Authentication.Caching/Pivot.Framework.Authentication.Caching.csproj
+++ b/Src/Containers/Authentication/Pivot.Framework.Authentication.Caching/Pivot.Framework.Authentication.Caching.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\Pivot.Framework.Infrastructure.Caching\Pivot.Framework.Infrastructure.Caching.csproj" />
+    <ProjectReference Include="..\Pivot.Framework.Authentication.API\Pivot.Framework.Authentication.AspNetCore.csproj" />
     <ProjectReference Include="..\Pivot.Framework.Authentication\Pivot.Framework.Authentication.csproj" />
   </ItemGroup>
 </Project>
