--- a/Src/Core/Pivot.Framework.Domain/Pivot.Framework.Domain.csproj
+++ b/Src/Core/Pivot.Framework.Domain/Pivot.Framework.Domain.csproj
@@ -10,7 +10,7 @@
     <PackageId>Pivot.Framework.Domain</PackageId>
     <Version>1.0.0</Version>
     <Authors>Gihed Annabi</Authors>
-    <Company>Gihed Annabi</Company>
+    <Company>Pivot Software</Company>
     <Copyright>Copyright © 2026 Gihed Annabi</Copyright>
     <RepositoryUrl>https://github.com/AnnabiGihed/Pivot.Framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
