--- a/Src/Infrastructure/Pivot.Framework.Infrastructure.Caching/Pivot.Framework.Infrastructure.Caching.csproj
+++ b/Src/Infrastructure/Pivot.Framework.Infrastructure.Caching/Pivot.Framework.Infrastructure.Caching.csproj
@@ -11,7 +11,7 @@
     <PackageId>Pivot.Framework.Infrastructure.Caching</PackageId>
     <Version>1.0.0</Version>
     <Authors>Gihed Annabi</Authors>
-    <Company>Gihed Annabi</Company>
+    <Company>Pivot Software</Company>
     <Copyright>Copyright © 2026 Gihed Annabi</Copyright>
     <RepositoryUrl>https://github.com/AnnabiGihed/Pivot.Framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
